--- a/index.html
+++ b/index.html
@@ -3,15 +3,57 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Component Playground</title>
+  <title>Random User</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.4a2706caecf62b187ba2.css"></head>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- <link rel="stylesheet" href="styles.4a2706caecf62b187ba2.css"> -->
+  <link rel="stylesheet" href="orginal.css">
+</head>
+<header style="background-color:black;height:50vh">
+</header>
 <body>
-  <plg-root></plg-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.2c5b70a02411645f7563.js"></script><script type="text/javascript" src="main.153a73200ebb5dc1959b.js"></script></body>
+<div class="frame card_offset">
+	<div class="card">
+		<div class="details">
+			<div class="user_photo horizontal_center" id="user_photo">
+				<a href="javascript:getNewUser();" class="refresh">New</a>
+				<img id="profile" src="">
+			</div>
+			<p id="user_title"></p>
+			<p id="user_value" style="text-transform: lowercase;"></p>
+		</div>
+		<ul class="values_list horizontal_center" id="values_list">
+			<li data-title="Hi, My name is" data-value="" data-label="name" class="" id="name"><img src="./assets/icons/svg/account/login.svg"></li>
+			<li data-title="My email address is" data-value="" data-label="email" data-caps="false" class="" id="email"></li>
+			<li data-title="My birthday is" data-value="" data-label="birthday" class="" id="birthday"></li>
+			<li data-title="My address is" data-value="" data-label="location" class="" id="address"></li>
+			<li data-title="My phone number is" data-value="" data-label="phone" class="" id="phone"></li>
+			<li data-title="My password is" data-value="" data-label="pass" data-caps="false" class="" id="password"></li>
+		</ul>
+	</div>
+</div>
+</body>
 
+<script>
+$.ajax({
+  url: 'https://randomuser.me/api/',
+  dataType: 'json',
+  success: function(data) {
+    console.log(data);
+    // $("#user_photo").html(data.results[0].user.picture);
+    $("#profile").attr("src",data.results[0].picture.large);
+    $("#name").attr("data-value",data.results[0].name.first);
+    $("#email").attr("data-value",data.results[0].email);
+    $("#birthday").attr("data-value",data.results[0].dob.date);
+    $("#address").attr("data-value",data.results[0].location.street);
+    $("#phone").attr("data-value",data.results[0].phone);
+    $("#password").attr("data-value",data.results[0].login.password);
+  }
+});
+
+
+</script>
 </html>
